FIX:button is wrapped on an anchor

--- a/src/styles/lobby-hero.module.scss
+++ b/src/styles/lobby-hero.module.scss
@@ -99,6 +99,7 @@ div.column:first-of-type {
 
     .link {
       padding-right: 10px;
+      text-decoration: none;
 
       .button {
         background-color: transparent;
